// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrappedEvent render snapshot 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_name": "Bridge Event",
      "color": "#42f5aa",
      "fallback": "NCG 0xCbfC996ad185c61a031f40CeeE80a055e6D83005 → wNCG 0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
      "fields": Array [
        Object {
          "title": "9c network transaction",
          "value": "https://explorer.libplanet.io/9c-internal/transaction?3409cdbaa24ec6f7c8d2c0f636325a2b2e9611e5e6df5c593cfcd299860d8043",
        },
        Object {
          "title": "Ethereum network transaction",
          "value": "https://ropsten.etherscan.io/tx/0x9360cd40682a91a71f0afbfac3dd381866cdb319dc01c13531dfe648f8a28bc7",
        },
        Object {
          "title": "sender (NineChronicles)",
          "value": "0xCbfC996ad185c61a031f40CeeE80a055e6D83005",
        },
        Object {
          "title": "recipient (Ethereum)",
          "value": "0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
        },
        Object {
          "title": "amount",
          "value": "100",
        },
        Object {
          "title": "fee",
          "value": "1",
        },
      ],
    },
  ],
  "text": "NCG → wNCG event occurred.",
}
`;

exports[`WrappedEvent render snapshot with refund 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_name": "Bridge Event",
      "color": "#42f5aa",
      "fallback": "NCG 0xCbfC996ad185c61a031f40CeeE80a055e6D83005 → wNCG 0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
      "fields": Array [
        Object {
          "title": "9c network transaction",
          "value": "https://explorer.libplanet.io/9c-internal/transaction?3409cdbaa24ec6f7c8d2c0f636325a2b2e9611e5e6df5c593cfcd299860d8043",
        },
        Object {
          "title": "Ethereum network transaction",
          "value": "https://ropsten.etherscan.io/tx/0x9360cd40682a91a71f0afbfac3dd381866cdb319dc01c13531dfe648f8a28bc7",
        },
        Object {
          "title": "sender (NineChronicles)",
          "value": "0xCbfC996ad185c61a031f40CeeE80a055e6D83005",
        },
        Object {
          "title": "recipient (Ethereum)",
          "value": "0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
        },
        Object {
          "title": "amount",
          "value": "100",
        },
        Object {
          "title": "fee",
          "value": "1",
        },
        Object {
          "title": "refund amount",
          "value": "9999900000",
        },
        Object {
          "title": "refund transaction",
          "value": "https://explorer.libplanet.io/9c-internal/transaction?a3cd151aa0cb24b3e692f433b857f08bd347dad0d2d6ca3666f26420b8b8d096",
        },
      ],
    },
  ],
  "text": "NCG → wNCG event occurred.",
}
`;

exports[`WrappedEvent render snapshot with whitelist transfer 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_name": "Bridge Event",
      "color": "#b547f5",
      "fallback": "NCG 0xCbfC996ad185c61a031f40CeeE80a055e6D83005 → wNCG 0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
      "fields": Array [
        Object {
          "title": "9c network transaction",
          "value": "https://explorer.libplanet.io/9c-internal/transaction?3409cdbaa24ec6f7c8d2c0f636325a2b2e9611e5e6df5c593cfcd299860d8044",
        },
        Object {
          "title": "Ethereum network transaction",
          "value": "https://ropsten.etherscan.io/tx/0x9360cd40682a91a71f0afbfac3dd381866cdb319dc01c13531dfe648f8a28bc8",
        },
        Object {
          "title": "sender (NineChronicles)",
          "value": "0xCbfC996ad185c61a031f40CeeE80a055e6D83005",
        },
        Object {
          "title": "recipient (Ethereum)",
          "value": "0xDac65eCE9CB3E7a538773e08DE31F973233F064f",
        },
        Object {
          "title": "amount",
          "value": "200",
        },
        Object {
          "title": "fee",
          "value": "1",
        },
        Object {
          "title": "description",
          "value": "test description",
        },
      ],
    },
  ],
  "text": "NCG → wNCG event occurred. (Whitelist Transfer) <!here>",
}
`;
